--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6204,7 +6204,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#he002\n",
+    "url = 'https://100api.orai.dev/gn006'\n",
+    "data = {\n",
+    "  \"input_source_hash\": \"QmZRUKPVU7EoH94hwhdA2RrJUrFq2DfLN9RjTCfCZ72t98\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
