--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6304,7 +6304,7 @@
     "#he005\n",
     "url = 'https://100api.orai.dev/he005'\n",
     "data = {\n",
-    "  \"input_source_hash\": \"Qmcc629Sum93sXtb5MfFg6xWEeRGTU8WCbC8kKhTe3Ms2L\"\n",
+    "  \"smiles\": \"CCOc1ccc2nc(S(N)(=O)=O)sc2c1\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
