--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6352,7 +6352,8 @@
     "#he007\n",
     "url = 'https://100api.orai.dev/he007'\n",
     "data = {\n",
-    "  \"smiles\": \"CCOc1ccc2nc(S(N)(=O)=O)sc2c1\"\n",
+    "  \"smiles\": \"CCOc1ccc2nc(S(N)(=O)=O)sc2c1\",\n",
+    "  \"type_of_fingerprints\": \"morgan\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
