--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6401,8 +6401,7 @@
     "#he008\n",
     "url = 'https://100api.orai.dev/he008'\n",
     "data = {\n",
-    "  \"smiles\": \"CCOc1ccc2nc(S(N)(=O)=O)sc2c1\",\n",
-    "  \"type_of_fingerprints\": \"morgan\"\n",
+    "  \"smiles\": \"c1ccccn1\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
