--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6449,7 +6449,8 @@
     "#he009\n",
     "url = 'https://100api.orai.dev/he009'\n",
     "data = {\n",
-    "  \"smiles\": \"c1ccccn1\"\n",
+    "  \"smiles_1\": \"c1ccco1\",\n",
+    "  \"smiles_2\": \"c1ccccn1\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
