--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6498,8 +6498,7 @@
     "#he011\n",
     "url = 'https://100api.orai.dev/he011'\n",
     "data = {\n",
-    "  \"smiles_1\": \"c1ccco1\",\n",
-    "  \"smiles_2\": \"c1ccccn1\"\n",
+    "  \"smiles\": \"c1ccccn1\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
