--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6546,7 +6546,7 @@
     "#he012\n",
     "url = 'https://100api.orai.dev/he012'\n",
     "data = {\n",
-    "  \"smiles\": \"c1ccccn1\"\n",
+    "  \"input_source_hash\": \"QmPshXYw66WpXkYfK8eXC52PJV2GTHZuVGYMPEDmHuNmBe\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
