--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6594,7 +6594,7 @@
     "#he013\n",
     "url = 'https://100api.orai.dev/he012'\n",
     "data = {\n",
-    "  \"input_source_hash\": \"QmPshXYw66WpXkYfK8eXC52PJV2GTHZuVGYMPEDmHuNmBe\"\n",
+    "  \"smiles\": \"CCOc1ccc2nc(S(N)(=O)=O)sc2c1\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
