--- a/100API.ipynb
+++ b/100API.ipynb
@@ -6592,7 +6592,7 @@
    "outputs": [],
    "source": [
     "#he013\n",
-    "url = 'https://100api.orai.dev/he012'\n",
+    "url = 'https://100api.orai.dev/he013'\n",
     "data = {\n",
     "  \"smiles\": \"CCOc1ccc2nc(S(N)(=O)=O)sc2c1\"\n",
     "}\n",
@@ -6600,7 +6600,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
     "\n",
     "print(data)\n",
     "print(response.json())"
