--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1148,7 +1148,16 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmT28r31q3nZgL1AzoPRVnC8sXoEiWmjF9L7GNTfjSKsRF'}\n",
+      "{'data': [{'label': 'table', 'max_x': 699, 'max_y': 321, 'min_x': 139, 'min_y': 8}], 'status': 'success'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV044\n",
     "url = 'https://100api.orai.dev/cv044'\n",
