--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'cach-chon-thit-vit-ngon-va-so-che-vit-sach-khong-hoi-tipsnote-800x450-6.jpeg',\n",
-       " 'Hash': 'QmVuP4WNwd5RwJkbFGCZ5G1aepZTDNAKFcfv4enpqrNT2u',\n",
-       " 'Size': '82616'}"
+       "{'Name': 'ok.png',\n",
+       " 'Hash': 'QmXET1ksNDm1KU8gzLqTWsZgJziQNKF4dkfVaC1NZPuuiJ',\n",
+       " 'Size': '66143'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./cach-chon-thit-vit-ngon-va-so-che-vit-sach-khong-hoi-tipsnote-800x450-6.jpeg','rb')}\n",
+    "files = {'file': open('./ok.png','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json() "
    ]
