--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'ok.png',\n",
-       " 'Hash': 'QmXET1ksNDm1KU8gzLqTWsZgJziQNKF4dkfVaC1NZPuuiJ',\n",
-       " 'Size': '66143'}"
+       "{'Name': 'jiso.png',\n",
+       " 'Hash': 'Qmc7SHCrSAmc5uS8UmLPBU8gyw9ZXktxMP5ePLKhnzBiCo',\n",
+       " 'Size': '110145'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./ok.png','rb')}\n",
+    "files = {'file': open('./jiso.png','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json() "
    ]
