--- a/main.ipynb
+++ b/main.ipynb
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'jiso.png',\n",
-       " 'Hash': 'Qmc7SHCrSAmc5uS8UmLPBU8gyw9ZXktxMP5ePLKhnzBiCo',\n",
-       " 'Size': '110145'}"
+       "{'Name': 'data.csv',\n",
+       " 'Hash': 'QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo',\n",
+       " 'Size': '1756'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
