--- a/main.ipynb
+++ b/main.ipynb
@@ -37,6 +37,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "requests.get('https://gateway.ipfs.airight.io/ipfs/QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [],
