--- a/main.ipynb
+++ b/main.ipynb
@@ -37,11 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "requests.get('https://gateway.ipfs.airight.io/ipfs/QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo')"
+    "requests.get('https://gateway.ipfs.airight.io/ipfs/QmTrkyp54aRpSq1zsg4rtYckpFj9dfShD2ZrjXUm4j1VXo').text"
    ]
   },
   {
