--- a/main.ipynb
+++ b/main.ipynb
@@ -30,7 +30,7 @@
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./a.png','rb')}\n",
+    "files = {'file': open('./022878.wav','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
