--- a/100API.ipynb
+++ b/100API.ipynb
@@ -40,7 +40,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
+      "{'Hash': 'QmaQEmMm8C5tE7CQFoVk54bzEtTNUSH1u5iTprRkPLD6z8', 'Name': 'file', 'Size': '7294'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV001_2\n",
     "url = 'https://100api.orai.dev/cv001_2'\n",
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +150,7 @@
      "output_type": "stream",
      "text": [
       "{'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
-      "{'data': 'empty range for randrange() (0, 0, 0)', 'status': 'error'}\n"
+      "{'Hash': 'QmXHDrwDt499WuHzeej1PNvN8YUL2R4gXHpSP7ZwRJRVEW', 'Name': 'file', 'Size': '8044'}\n"
      ]
     }
    ],
