--- a/100API.ipynb
+++ b/100API.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
      "output_type": "stream",
      "text": [
       "{'input_source_hash': 'QmahGzqFngQnQ81gpWf5o6UkPWEH9BYWUigoeCTxSqAFsV'}\n",
-      "{'data': 'empty range for randrange() (0, 0, 0)', 'status': 'error'}\n"
+      "{'Hash': 'QmX5bwh5EkFTU8MTSLeeggKAijCTpfzHA8ipwm5xbUspBq', 'Name': 'file', 'Size': '7667'}\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
