--- a/main.ipynb
+++ b/main.ipynb
@@ -18,9 +18,9 @@
     {
      "data": {
       "text/plain": [
-       "{'Name': '022878.wav',\n",
-       " 'Hash': 'QmNTpXRvXVLiY38DsY9Wa8isfsbchM1pfMrgTJQftv9VXC',\n",
-       " 'Size': '410800'}"
+       "{'Name': '5-h2-0-2fa4d.jpeg',\n",
+       " 'Hash': 'QmPF2ivWvWayDasMQZ9yDu5ih9XcXEsnVQFAGtm5p9QXLb',\n",
+       " 'Size': '45919'}"
       ]
      },
      "execution_count": 2,
@@ -30,7 +30,7 @@
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./022878.wav','rb')}\n",
+    "files = {'file': open('1_0x0_790x520_0x520_number-plate-clone.jpeg','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
