--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': '5-h2-0-2fa4d.jpeg',\n",
-       " 'Hash': 'QmPF2ivWvWayDasMQZ9yDu5ih9XcXEsnVQFAGtm5p9QXLb',\n",
-       " 'Size': '45919'}"
+       "{'Name': '1_0x0_790x520_0x520_number-plate-clone.jpeg',\n",
+       " 'Hash': 'QmQunB1gWo4c2TJXrWyBgSKJjiK3LFcKkZcHr2NQhJ8RoN',\n",
+       " 'Size': '73580'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('1_0x0_790x520_0x520_number-plate-clone.jpeg','rb')}\n",
+    "files = {'file': open('divided-highway-sign-232x300.jpeg','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
