--- a/100API.ipynb
+++ b/100API.ipynb
@@ -598,7 +598,16 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmU6h69HavNH1CJas4FVtHREiVP7QPvDdAZ3dpr7oyDHSA'}\n",
+      "{'data': 'park', 'status': 'success'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV020\n",
     "url = 'https://100api.orai.dev/cv020'\n",
@@ -613,21 +622,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'requests' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 9\u001b[0m\n\u001b[1;32m      3\u001b[0m data \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39minput_source_hash\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mQmU6h69HavNH1CJas4FVtHREiVP7QPvDdAZ3dpr7oyDHSA\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      4\u001b[0m         \u001b[39m'\u001b[39m\u001b[39miterations\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m5\u001b[39m,\n\u001b[1;32m      5\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mnum_octaves\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m5\u001b[39m}\n\u001b[1;32m      6\u001b[0m headers \u001b[39m=\u001b[39m {\n\u001b[1;32m      7\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mAuthorization\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mai_market\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      8\u001b[0m     }\n\u001b[0;32m----> 9\u001b[0m response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mpost(url, data\u001b[39m=\u001b[39mdata, headers\u001b[39m=\u001b[39mheaders)\n\u001b[1;32m     10\u001b[0m \u001b[39mprint\u001b[39m(data)\n\u001b[1;32m     11\u001b[0m \u001b[39mprint\u001b[39m(response\u001b[39m.\u001b[39mjson())\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'requests' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#CV021\n",
     "url = 'https://100api.orai.dev/cv021'\n",
